--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jonathan Yu
 #subtitle: by HTML5 UP
 subtitle: 
-email: jyu.ucsd@gmail.com
+email: jonyu.vortex@gmail.com
 #description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 description: A scientist who enjoys <br /> solving tough problems
 #baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
@@ -18,7 +18,7 @@ country: United States of America
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
-tiles-count: 6
+tiles-count: 3
 
 # social settings
 500px_url:
